feat: implements v2/lookup
